Committing bayes model and regression and discussion

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -21,12 +21,13 @@
    },
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e8a88026973716cb",
    "metadata": {
     "ExecuteTime": {
@@ -81,7 +82,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "5f51cd72-7f73-4849-8b1a-988292f94a69",
+       "ref": "23214c37-a010-4b8c-8948-4988a5523c9b",
        "rows": [
         [
          "0",
@@ -763,15 +764,35 @@
        "[20717 rows x 7 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "football_records = pd.read_csv(\"college_football_records.csv\")\n",
-    "football_records = \n",
     "football_records"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a14cd7c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(198,)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(football_records['team']).shape"
    ]
   },
   {
@@ -3541,6 +3562,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "786d3b55",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 5.,  7., 11., 13., 14., 15., 16., 17., 18., nan])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(scorecard['CCSIZSET'])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ce0f4e0f4a52e39",
    "metadata": {},
@@ -3563,7 +3605,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
